# OnScreen

./: .dockerignore  .env.example  .gitignore  .golangci.yml  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  deploy.ps1  go.mod  go.sum  sqlc.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-client.yml  release.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
clients/android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
clients/android_native/: build.gradle.kts  gradle.properties  settings.gradle.kts
clients/desktop/: .gitignore  README.md  build.ps1  dev.ps1  package.json
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: README.md
clients/desktop/src-tauri/src/: audio.rs  lib.rs  main.rs  now_playing.rs  windows_exclusive.rs  windows_shared.rs
clients/firetv/: README.md  package.json
clients/roku/: README.md  bsconfig.json  manifest  package-lock.json  package.json  todo.md
clients/tizen/: .gitignore  README.md  config.xml  package-lock.json  package.json  svelte.config.js
clients/webos/: .gitignore  README.md  package-lock.json  package.json
cmd/devtoken/: main.go
cmd/server/: adapter.go  adapter_dvr.go  adapter_library.go  adapter_livetv.go  adapter_lyrics.go  adapter_match.go  adapter_media.go  adapter_pair.go  adapter_people.go  adapter_requests.go  adapter_session_epoch.go  adapter_subtree.go  adapter_watchevent.go  adapter_watchstatus.go  arr_adapter.go  auth_service.go  capabilities_provider.go  impersonation_adapter.go  invite_adapter.go  main.go  ocr_adapter.go  password_reset_adapter.go  seed_system_tasks.go  seed_system_tasks_test.go  user_service.go  user_service_test.go  viewas_audit_adapter.go  webhook_service.go
cmd/worker/: adapters.go  main.go
docker/: .env.example  Dockerfile  Dockerfile.ffmpeg  Dockerfile.gpu  deploy-gpu.sh  docker-compose.gpu.yml  docker-compose.ha.yml  docker-compose.idp.yml  docker-compose.truenas-deps.yml  docker-compose.truenas.yml  docker-compose.workers.yml  docker-compose.yml  nginx.conf
docs/: auth-test-stack.md  comparison-matrix.md  dependabot-triage-2026-04-27.md  deployment.md  manual-test-plan.md  plugins.md  v2-roadmap.md  v2.1-release-test-plan.md  v2.1-roadmap.md  v2.2-roadmap.md
docs/api/: ERROR_CODES.md  openapi.yaml
docs/releases/: v2.0.0.md
installer/linux/: .env.example  README.md  build.ps1  install-service.sh  onscreen.service  start-deps.sh  start.sh  uninstall-service.sh
installer/windows/: .env.example  README.md  build.ps1  docker-compose.deps.yml  install-service.ps1  onscreen.xml  start-deps.ps1  start.ps1  uninstall-service.ps1
installer/windows-msi/: build.ps1  onscreen.iss  postinstall.ps1  preuninstall.ps1  service-onscreen.xml  service-postgres.xml  service-redis.xml
internal/api/: router.go
internal/arr/: client.go  client_test.go  radarr.go  radarr_test.go  sonarr.go  sonarr_test.go
internal/artwork/: artwork.go  artwork_test.go
internal/audit/: audit.go  audit_test.go
internal/auth/: auth_test.go  crypto.go  tokens.go
internal/config/: config.go  config_test.go  sighup_unix.go  sighup_windows.go
internal/contentrating/: contentrating.go  contentrating_test.go
internal/db/: db.go
internal/discovery/: udp.go  udp_test.go
internal/email/: email.go  email_test.go  templates.go
internal/intromarker/: align.go  detector.go  ffmpeg.go  fpcalc.go  intromarker_test.go  store.go
internal/livetv/: discovery.go  dvr.go  dvr_worker.go  hdhomerun.go  hdhomerun_test.go  hls.go  hls_test.go  m3u.go  m3u_fuzz_test.go  m3u_test.go  service.go  service_test.go  tuner.go  xmltv.go  xmltv_fuzz_test.go  xmltv_test.go
internal/lyrics/: lyrics.go  lyrics_test.go
internal/metadata/: agent.go  music.go
internal/notification/: broker.go  broker_test.go  service.go  service_test.go
internal/observability/: health.go  health_test.go  logbuffer.go  logbuffer_test.go  logging.go  logging_test.go  metrics.go  migrations.go  migrations_test.go  slog_trace.go  slog_trace_test.go  tracing.go
internal/photoimage/: orientation.go  orientation_test.go  serve.go  serve_test.go
internal/plugin/: client.go  dispatcher.go  dispatcher_test.go  egress.go  egress_test.go  plugin.go  registry.go  registry_test.go  smoke_test.go
internal/requests/: service.go
internal/safehttp/: safehttp.go  safehttp_test.go
internal/scanner/: audiobookscan.go  audiobookscan_test.go  bookscan.go  bookscan_cbr.go  bookscan_epub.go  bookscan_test.go  dedupe_test.go  enrich_decision_test.go  enricher.go  enricher_test.go  exif.go  folderids.go  folderids_test.go  hash.go  hash_test.go  hierarchy_test.go  homevideoscan.go  homevideoscan_test.go  musicparse.go  musicparse_test.go  musicscan.go  musicscan_art_test.go  musicvideoscan.go  musicvideoscan_test.go  podcastscan.go  podcastscan_test.go  probe.go  probe_test.go  processfile_fastskip_test.go  scanner.go  scanner_test.go  tvparse.go  tvparse_test.go  watcher.go
internal/scheduler/: handlers_backup.go  handlers_backup_test.go  handlers_cooccurrence.go  handlers_dvr.go  handlers_dvr_retention.go  handlers_epg.go  handlers_epg_test.go  handlers_ocr.go  handlers_ocr_test.go  handlers_scan.go  handlers_scan_test.go  pgx.go  scheduler.go  scheduler_test.go
internal/streaming/: tracker.go  tracker_test.go  tracker_valkey_test.go
internal/testdb/: testdb.go
screenshots/: README.md
web/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vite.config.ts.timestamp-1774560799715-e7f152b47b35b8.mjs  vite.config.ts.timestamp-1774643496300-aa8bbf93877868.mjs  vite.config.ts.timestamp-1774711840518-4a54b5c4f39c98.mjs  vite.config.ts.timestamp-1774786772502-a4c317b8d1a928.mjs  vitest.config.ts
webos/: README.md  appinfo.json  tsconfig.json  vite.config.ts
(+913 files in other folders)
