[package]
name = "onscreen-desktop"
version = "0.1.0"
description = "OnScreen desktop client"
authors = ["OnScreen contributors"]
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0"

# Library crate so the Tauri runner can pick it up; main.rs is just
# the entry-point shim per the Tauri 2 convention.
[lib]
name = "onscreen_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri runtime + the small set of plugins this scaffold needs.
# - tauri          : window + IPC bridge
# - tauri-plugin-store : persists server URL / credentials between
#                        runs without rolling our own SQLite — the
#                        backing JSON file lives in the platform's
#                        appdata dir so backups + sync work for free.
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# Native audio engine. cpal exposes the platform's exclusive-mode
# backends (WASAPI on Windows, CoreAudio on macOS, ALSA on Linux),
# which is what the audiophile pillar needs — `<audio>` in the
# webview routes through the OS mixer and resamples even FLAC.
# Decoder lands when the streaming path lands; for the v2.1 cpal
# foundation this commit ships device enumeration + a test-tone
# command so the engine path is provably reachable on the user's
# hardware before we layer FLAC + transport on top.
cpal = "0.16"

[features]
# Default to nothing — opt into custom-protocol for production builds
# the way Tauri's templates do. The runner enables it automatically
# for `cargo tauri build`; tests/dev mode skip it.
custom-protocol = ["tauri/custom-protocol"]
