[package]
name = "onscreen-desktop"
version = "0.1.0"
description = "OnScreen desktop client"
authors = ["OnScreen contributors"]
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0"

# Library crate so the Tauri runner can pick it up; main.rs is just
# the entry-point shim per the Tauri 2 convention.
[lib]
name = "onscreen_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri runtime + the small set of plugins this scaffold needs.
# - tauri          : window + IPC bridge
# - tauri-plugin-store : persists server URL / credentials between
#                        runs without rolling our own SQLite — the
#                        backing JSON file lives in the platform's
#                        appdata dir so backups + sync work for free.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
# OS-level keyboard shortcuts. Used to register the platform media
# keys (Play/Pause, Next, Previous) so transport works without the
# app needing focus — same UX as Spotify, Plexamp, etc. The plugin
# emits an event when a registered combo fires; the AudioPlayer in
# the webview listens and dispatches to the audio store.
tauri-plugin-global-shortcut = "2"
# OS notifications — surfaces track changes / library events to the
# system notification centre, so the user sees "Now playing X" in
# their notification shell when the OnScreen window isn't focused.
tauri-plugin-notification = "2"

# OS keychain. Refresh tokens move out of the plaintext appdata
# JSON file and into Windows Credential Manager / macOS Keychain
# / Linux Secret Service. Falls back to the existing store on
# platforms where the keychain is unavailable (e.g. a headless
# Linux desktop without libsecret) — the get_tokens IPC retains
# the old read path as a migration fallback.
# OS keychain. Refresh tokens move out of the plaintext appdata
# JSON file and into Windows Credential Manager / macOS Keychain
# / Linux Secret Service. Pinned to 3.x: 4.0.0 changed scope and
# pulls in aegis (crypto) that needs clang-cl on Windows MSVC,
# which we don't want as a build prereq. The 3.x feature names
# pick the platform-native backends without dragging in vendored
# C builds.
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# Native audio engine. cpal exposes the platform's exclusive-mode
# backends (WASAPI on Windows, CoreAudio on macOS, ALSA on Linux),
# which is what the audiophile pillar needs — `<audio>` in the
# webview routes through the OS mixer and resamples even FLAC.
cpal = "0.16"
# claxon — pure-Rust FLAC decoder. No native deps, no licensing
# friction. Decode runs on a background thread; samples land in a
# ringbuf the realtime cpal callback drains.
claxon = "0.4"

# symphonia — pure-Rust multi-format decoder. Handles the rest of
# the lossless catalog: ALAC (Apple Lossless, typically inside an
# MP4/M4A container), WAV (LPCM), and AIFF. FLAC stays on claxon
# (already-tested path + smaller dep). Default features off so we
# pull in only the codec + container modules we actually use.
symphonia = { version = "0.5", default-features = false, features = ["alac", "isomp4", "wav", "aiff", "pcm"] }
# Lock-free single-producer single-consumer ring buffer. The
# realtime audio callback can't take a Mutex (blocking inside
# the callback drops samples = audible glitch) — ringbuf's
# atomics are the safe primitive.
ringbuf = "0.4"
# ureq — blocking HTTP client. Pulled in over reqwest because we
# don't need a tokio runtime for the audio path: one decoder
# thread, one streaming response, blocking reads are exactly
# right. Bearer auth via ureq's `set` API.
ureq = "2"

# OS now-playing widget: SystemMediaTransportControls on Windows,
# MPNowPlayingInfoCenter / MPRemoteCommandCenter on macOS, MPRIS
# (D-Bus) on Linux. souvlaki abstracts the three behind one
# MediaControls struct so we set metadata / playback state once and
# the lockscreen art + transport buttons + Bluetooth headset
# controls light up across all three platforms. Already-cached OS
# media keys via tauri-plugin-global-shortcut keep working — souvlaki
# adds the *display* widget plus a second event source for
# system-level transport (Bluetooth play button, Apple Watch, etc.).
souvlaki = "0.8"

# Windows-only: souvlaki needs an HWND to bind to. tauri::WebviewWindow
# exposes hwnd() under raw-window-handle; on Windows we cast it to
# the i32 souvlaki expects.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation"] }

[features]
# Default to nothing — opt into custom-protocol for production builds
# the way Tauri's templates do. The runner enables it automatically
# for `cargo tauri build`; tests/dev mode skip it.
custom-protocol = ["tauri/custom-protocol"]
